Alignment issue resolved

--- a/Frontend/src/components/Background/Aurora.css
+++ b/Frontend/src/components/Background/Aurora.css
@@ -1,6 +1,8 @@
 .aurora-container {
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
   z-index: -20;
   background-color: #17142D;
+  position: fixed;
+  top: 0;
 }
